<resources>
    <string name="app_name">Movie Search</string>
    <string name="minutesWord">minutes</string>
    <string name="errorWord">Error</string>
    <string name="errorLoadingMovieDetailsMessage">Error loading movie details</string>
    <string name="tryToReloadButtonText">Try to reload</string>
    <string name="returnToPrevScreenButtonText">Return to the previous screen</string>
    <string name="loadingCompletedSuccessfullyText">Loading movies list completed successfully </string>
    <string name="genreWord">Genre: </string>
    <string name="durationWord">Duration: </string>
    <string name="ratingWord">Rating: </string>
    <string name="releaseDateWord">Release date: </string>
    <string name="openMovieDetailsButtonText">Open movie details</string>
    <string name="dialogOKButtonText">OK</string>
    <string name="connectionErrorDialogText">Connection error, please, check connection settings</string>
    <string name="language">en</string>
    <string name="mediaTitle">Media</string>
    <string name="search">search</string>
    <string name="movies_search_nav_button_text">Movies search</string>
    <string name="adults_content">Adults content</string>
    <string name="with_adults">With adults</string>
    <string name="no_adults">No adults</string>
    <string name="for_adults_warning">For adults!</string>
    <string name="viewed">Viewed: </string>
    <string name="movies_history_nav_button_text">Movie viewing history </string>
    <string name="clear_history">Clear history</string>
    <string name="your_note_title">Your note:</string>
    <string name="favorite">Favorite:</string>
    <string name="favorite_movies_text">Favorite movies</string>
    <string name="movieListsFragmentTitle">Movies Lists and Search</string>
    <string name="movieHistoryFragmentTitle">Movies History</string>
    <string name="moviesFavoriteFragmentTitle">Favorite Movies</string>
    <string name="movieDetailsFragmentTitle">Movie details</string>
    <string name="phones_book_text">Phones book</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phoneBookFragmentTitle">Phone book</string>
    <string name="access_to_contacts_title">Access to contacts</string>
    <string name="access_to_fine_location_title">Access to fine location</string>
    <string name="grant_access_button_text">Grant access</string>
    <string name="explanation_of_contacts_permission">To work in this window you need permission access to contacts. Grant permission in phone settings</string>
    <string name="explanation_of_fine_location_permission">To work in this window you need permission access to fine location. Grant permission in phone settings</string>
    <string name="close_button_text">Close</string>
    <string name="negative_button_text">Do not</string>
    <string name="phone_access_permission_title">Phone access permission</string>
    <string name="explanation_of_phone_permission">You need to get permission to the phone access. Grant permission in phone settings</string>
    <string name="cinemas_map_text">Cinemas map</string>
    <string name="access_to_fine_location_text">Access to fine location</string>
    <string name="enter_search_string_hint">Enter search string</string>
    <string name="find_button_text">Find</string>
    <string name="actors_title">Actors:</string>
    <string name="actorDetailsFragmentTitle">Actor details</string>
    <string name="day_of_birth_title">Day of birth:</string>
    <string name="date_and_place_of_birth_formatted">%s %s</string>
    <string name="show_birth_place_on_the_map_text">Show birth place on the Map</string>
    <string name="ok_button_text">OK</string>
    <string name="near_movie_theater_text">You near movie theater</string>
</resources>