<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="10"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:orderInCategory="20"
        android:title="@string/adults_content"
        app:showAsAction="never">
        <menu>
            <group
                android:id="@+id/adultGroup"
                android:checkableBehavior="single"
                android:menuCategory="container">
                <item
                    android:id="@+id/with_adults"
                    android:orderInCategory="30"
                    android:title="@string/with_adults" />
                <item
                    android:id="@+id/no_adults"
                    android:orderInCategory="40"
                    android:title="@string/no_adults" />
            </group>
        </menu>
    </item>
</menu>